--- a/services/admin-service/.github/workflows/admin-service-ci.yml
+++ b/services/admin-service/.github/workflows/admin-service-ci.yml
@@ -29,3 +29,34 @@ jobs:
 
       - name: Run tests
         run: npm test
+name: Admin Service CI
+
+on:
+  push:
+    paths:
+      - 'services/admin-service/**'
+      - '.github/workflows/admin-service-build.yml'
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./services/admin-service
+          push: true
+          tags: johnnychris777/admin-service:latest
+
