--- a/services/admin-service/package.json
+++ b/services/admin-service/package.json
@@ -4,14 +4,12 @@
   "description": "Admin microservice for XYZ platform",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "jest"
   },
-  "author": "johnnychris77",
-  "license": "MIT",
+  "author": "John",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^30.0.4",
@@ -19,11 +17,8 @@
   },
   "jest": {
     "testMatch": [
-      "**/tests/**/*.test.js"
+      "**/__tests__/**/*.[jt]s?(x)",
+      "**/?(*.)+(spec|test).[tj]s?(x)"
     ]
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "keywords": []
+  }
 }
